fixed-spacing

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -63,9 +63,8 @@ a:hover {
 }
 
 h1 {
-  padding-top: 60px;
-  margin-top: 60px;
-  margin: 0.67em 0;
+  padding-top: 70px;
+  margin-top: -50px;
   font-size: 2em;
 }
 
@@ -529,7 +528,6 @@ h6 .small,
   color: #999999;
 }
 
-h1,
 h2,
 h3 {
   margin-top: 20px;
